# organizations

./: .gitignore  CLAUDE.md  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
data/advocacy/: american_civil_liberties_union.yml
data/party/: constitution.yml  democratic.yml  green.yml  libertarian.yml  reform.yml  republican.yml  working_families.yml
data/think_tank/: heritage_foundation.yml
data/union/: service_employees_international_union.yml
schema/: entity.schema.json
src/organizations/: __init__.py  cli.py  lint.py  models.py  paths.py
tests/: test_models.py  test_paths.py
